css/style.css
*{
    margin: 0;
    padding: 0;
    font-family: Arial, Helvetica, sans-serif;
    box-sizing: border-box;
}

body{
    background-color: #efefef;
}

a{
    text-decoration: none;
}

span{
    color: rgb(66, 64, 64);
}

textarea{
    resize: none;
}

textarea::-webkit-scrollbar {
    width: .7em;
}

textarea::-webkit-scrollbar-track {
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
    background-color: transparent;
}

textarea::-webkit-scrollbar-thumb {
    background-color: #1876f2;
    border-radius: 10px;
    /* outline: 1px solid slategrey; */
}

/* NAV BELOW */

nav{
    display: flex;
    align-items: center;
    background-color: #1876f2;
    padding: 5px 5%;
    justify-content: space-between;
    
    position: sticky;
    top: 0;
    z-index: 100;
}

.logo{
    width: 150px;
    margin-right: 45px;
}

.nav-left{
    display: flex;
    align-items: center;
}

.ul-nav-left{
    list-style: none;
}

.ul-nav-left li{
    display: inline-block;
}

.ul-nav-left li img:hover{
    cursor: pointer;
}

.ul-nav-left img{
    width: 30px;
    margin-right: 25px;
}

.nav-right{
    display: flex;
    align-items: center;
}

.search-nav-right{
    background-color: #efefef;
    padding: 0px 10px 0px;
    border-radius: 2em;
    margin-right: 25px;
    width: 400px;
    height: 40px;
    display: flex;
    align-items: center;
}

.search-nav-right input{
    border: 0;
    background: none;
    outline: none;
    padding: .5em;
    flex-basis: 100%;
}

.search-nav-right img{
    width: 15px;
    margin-right: 5px;
}

.profile-image-nav img{
    width: 50px;
    border-radius: 50%;
    cursor: pointer;
}

.online{
    position: relative;
}

.online::after{
    content: '';
    position: absolute;
    height: 9px;
    width: 9px;
    background: #41db51;
    border: 1px solid #fff;
    border-radius: 50%;
    top: 0;
    right: 0;
}

.settings-menu{
    background: white;
    position: absolute;
    top: 110%;
    right: 5%;
    width: 90%;
    max-width: 305px;
    height: auto;
    max-height: 0;
    overflow: hidden;
    opacity: 0;
    padding: 1.2em;
    border-radius: .5em;
    box-shadow: 0 0 10px rgba(0,0,0,0.6);
    /* transition-property: max-height opacity;
    transition-duration: .5s, 10s; */
    transition: max-height .5s ease, opacity .5s;
}

.settings-menu a{
    font-size: .8em;
}

.settings-menu > .user-post-header{
    justify-content: space-between;
}

.settings-menu > .user-post-header:first-child{
    margin-bottom: 0;
    padding-bottom: 1em;
    border-bottom: 1px solid #ccc;
}

.user-profile-config{
    display: flex;
    align-items: center;
}

.settings-menu .switch-lighter{
    align-self: flex-start;
    position: relative;
    width: 50px;
    height: 20px;
    border-radius: .7em;
    background-color: #ccc;
}

.settings-menu .switch-lighter::after{
    content: '';
    width: 15px;
    height: 15px;
    background-color: rgb(179, 96, 96);
    border-radius: 50%;
    position: absolute;
    left: 5%;
    top: 2.7px;
}

.settings-menu .switch-lighter:checked{
    background-color: white;
}

.settings-menu .switch-lighter:checked::after{
    right: 5%;
    background-color: black;
}

/* .settings-menu > .user-post-header:first-child:after{
    content: '';
    position: absolute;
    top: 0;
    right: 0;
    width: 50px;
    height: 20px;
    border-radius: .7em;
    background: #ccc;
} */

.settings-menu .settings__report{
    padding-top: 1.2em;
    border-bottom: 1px solid #ccc;
    padding-bottom: 1.2em;
}

.settings__config{
    /* padding-top: 1.2em; */
    display: flex;
    justify-content: space-between;
}

.settings__config .config__arrow-img{
    width: 15px;
    height: 25px;
}

/* .settings__config::after{
    content: url('../images/arrow.png');
    position: absolute;
    top: 0;
    right: 0;
    background-image: url('../images/arrow.png');
    width: 15px;
    height: 15px;
} */

.settings-menu:last-child{
    padding-bottom: 0;
}

/* DIV CONTAINER BELOW */

.container{
    padding: 13px 5%;

    display: flex;
    justify-content: space-between;
}

/* DIV CONTAINER - LEFT SIDEBAR */

.left-sidebar{
    flex-basis: 25%;
    position: sticky;
    top: 77px;
    align-self: flex-start;
}

.links-left{
    border-bottom: 2px solid #ccc;
}

.links-left a, .shortcuts-left a{
    display: flex;
    justify-content:flex-start; /* substitui o width: fit-content */
    align-items: center;
    text-decoration: none;
    margin-bottom: 30px;
    /* width: fit-content; */
    color: rgb(131, 129, 129);
}

.links-left a:last-child{
    color: #1876f2;
    margin-bottom: 20px;
}

.links-left a img, .shortcuts-left a img{
    width: 25px;
    margin-right: 20px;
}

.shortcuts-left p{
    margin: 20px 0;
}

.shortcuts-left a img{
    border-radius: 5px;
}

/* DIV CONTAINER - MAIN */

.main{
    /* background-color: black; */
    flex-basis: 46%;
}

/* MAIN - Stories */

.stories{
    display: flex;
    justify-content: space-between;
    /* background: grey; */
}

.user-story{
    border-radius: .7em;
    height: 170px;
    background: url("../images/status-1.png");
    background-position: top;
    background-size: cover;
    /* border: 2px solid red; */
    width: 18%;
    position: relative;
    /* padding: 1em; */
}

.upload{
    text-align: center;
    position: absolute;
    bottom: 5px;
    width: 100%; /* centralizar conteúdo */
}

.upload img{
    width: 35px;
}

.upload p{
    color: white;
    text-shadow: 0 0 15px black;
    font-weight: 600;
}

.friend-story{
    /* border: 2px solid blue; */
    width: 18%;
    height: 170px;
    border-radius: .7em;
    position: relative;
}

.friend-story img{
    width: 40px;
    border-radius: 50%;
    border: 2px solid #1876f2;
    position: absolute;
    top: 5%;
    left: 7%;
}

.friend-story p{
    color: white;
    text-shadow: 0 0 15px black;
    font-weight: 600;
    position: absolute;
    bottom: 5px;
    width: 100%;
    text-align: center;
}

.friend-story:nth-child(2){
    background: url("../images/status-2.png");
    background-size: cover;
    background-position: top;
}

.friend-story:nth-child(3){
    background: url("../images/status-3.png");
    background-size: cover;
    background-position: top;
}

.friend-story:nth-child(4){
    background: url("../images/status-4.png");
    background-size: cover;
    background-position: top;
}

.friend-story:nth-child(5){
    background: url("../images/status-5.png");
    background-size: cover;
    background-position: top;
}


/* MAIN - User Post */

.user-post{
    background: white;
    padding: 15px 25px;
    border-radius: .7em;
    display: flex;
    align-items: flex-start;
    margin-top: 3%;
}

.profile-picture-main{
    width: 50px;
    border-radius: 50%;
    margin-right: 15px;
}

.post-body{
    display: flex;
    flex-direction: column;
    width: 100%;
}

.user-status{
    margin-bottom: 1.5em;
}

.user-status p:nth-child(2){
    font-size: .8em;
    color: rgb(131, 129, 129);
}

.post-textarea{
    width: 100%;
    border: none;
    display: block;
    padding: .5em;
    height: 100px;
    border-bottom: 1px solid rgb(131, 129, 129);
    margin-bottom: 1.5em;
    outline: none;
}

.user-post-options{
    display: flex;
}

.user-post-options li{
    display: inline-flex;
    justify-content: center;
    align-items: center;
    margin-right: 30px;
}

.user-post-options li:last-child{
    margin-right: 0;
}

.user-post-options li img{
    width: 25px;
    margin-right: 10px;
}

/* MAIN - User Posts (have been posted)*/

.user-post-header{
    display: flex;
    align-items: center;
    margin-bottom: 1em;
}

.user-post-info p:nth-child(2){
    font-size: .8em;
    color: rgb(131, 129, 129);
}

.user-post-content p{
    color: rgb(131, 129, 129);
    margin-bottom: 1em;
    line-height: 1.5;
}

.user-post-content img{
    width: 100%;
    border-radius: .5em;
    margin-bottom: 1em;
}

.user-post-reaction{
    display: flex;
    justify-content: space-between;
    width: 100%;
}

.user-post-reaction ul li{
    display: inline-flex;
    align-items: flex-end;
    list-style: none;
    margin-right: 30px;
    color: rgb(131, 129, 129);
    font-weight: 550;
}

.user-post-reaction ul li img{
    width: 25px;
    margin-right: 10px;
}

.profile-picture-footer{
    display: flex;
    align-items: center;
}
.profile-picture-footer img{
    width: 20px;
    margin-right: .3em;
}

/* Main - Load more button */

.load-post-button{
    width: 100%;
    text-align: center;
    margin-top: 3%;
}

.load-post-button button{
    padding: .3em 1em;
    cursor: pointer;
    font-size: 1.3em;
    border: 1px solid rgb(131, 129, 129);
    border-radius: .3em;
}

.load-post-button button:hover{
    color: #1876f2;
    padding: .3em 2em;
}

/* DIV CONTAINER - RIGHT SIDEBAR */

.right-sidebar{
    background-color: #fff;
    flex-basis: 25%;
    position: sticky;
    top: 77px;
    align-self: flex-start;
    box-sizing: border-box;
    padding: 0 25px;
    border-radius: .7em;
}

/* ------- Default Right Sidebar configs */

.conversation-sidebar, .advertisement-sidebar, .events-sidebar{
    margin: 25px 0;
}

.title-sidebar{
    display: flex;
    justify-content: space-between;
    margin-bottom: 15px;
}

.title-sidebar p{
    color: rgb(117, 115, 115);
    font-weight: 700;
}

.title-sidebar a{
    text-decoration: none;
    color: #1876f2;
    font-size: .8em;
}

/* ---------- */

.events-content{
    display: flex;
    flex-direction: column;
}

.event-info{
    display: flex;
    margin-bottom: 20px;
}

.event-calendar{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    overflow: hidden;
    background-color: #efefef;
    border-radius: .5em;
    padding-top: 10px; /* desce o conteudo */
    margin-right: 10px;
    flex-basis: 60px;

}

.event-month{
    background-color: #1876f2;
    color: white;
    width: 100%;
    text-align: center;
    font-size: .8em;
    padding: 3px; /* aumenta embaixo em cima o month */
}

.event-description{
    color: rgb(131, 129, 129);
}

.description-event-name{
    font-weight: 700;
}

.description-event-location{
    font-size: .9em;
}

.description-event-location img{
    width: 15px;
}

.event-description a{
    text-decoration: none;
    color: #1876f2;
    font-size: .8em;
}

.advertisement-sidebar img{
    width: 100%;
    border-radius: .5em;
}


.conversation-people{
    display: flex;
    justify-content: flex-start;
    align-items: center;
    margin: 25px 0;
}

.conversation-people img{
    width: 45px;
    border-radius: 50%;
    position: relative;
    margin-right: 10px;
}

.online-friends{
    position: relative;
}

.online-friends::after{
    content: '';
    height: 9px;
    width: 9px;
    position: absolute;
    top: 0;
    left: 0;
    background-color: #41db51;
    border: 1px solid white;
    border-radius: 50%;
}

.conversation-people p{
    color: rgb(131, 129, 129);
}


/* FOOTER */

.footer-page{
    margin: 2em 0 1em;
    color: rgb(131, 129, 129);
    width: 100%;
    text-align: center;
}

